kubernetes/projects/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        istio.io/dataplane-mode: none
    spec:
      containers:
      - name: gluetun
        image: ghcr.io/qdm12/gluetun:latest
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - containerPort: 9091
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:5.0.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 2000m
            memory: 8Gi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media
