kubernetes/projects/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  selector:
    app: qbittorrent
  ports:
  - port: 80
    targetPort: 80
