kubernetes/projects/apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - qbittorrent.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: qbittorrent
      port: 80
